# rag-assessment

./: .gitignore  README.md  graph.py  main.py  pyproject.toml  vector_store.py  wikipedia_pages.txt
rag_assessment/: embedding.py  evaluate_metrics.py  graph.py  main.py
